# fastapi-boiler-plate

./: .env.example  README.md  pyproject.toml
apps/: __init__.py
apps/api_v1/: routes.py
apps/api_v1/organization/: __init__.py  route.py  schema.py
apps/api_v1/role/: __init__.py  configuration.py  model.py  route.py  schema.py
apps/api_v1/user/: __init__.py  configuration.py  helper.py  model.py  route.py  schema.py  view.py
apps/auth/: route.py  schema.py  view.py
apps/base/: configuration.py  schema.py  view.py
apps/email/: __init__.py  configuration.py  helper.py  response_message.py  schema.py  send_email.py  view.py
core/: __init__.py  configuration.py  helper.py  middlewares.py  route.py  schema.py  security.py
database/: base.py  connection.py  init_database.py  session.py
migrations/: env.py
static/email/: email.html
