[tool.poetry]
name = "fastapi-boiler-plate"
version = "1.0.0"
description = "FastAPI Boiler Plate with PostgreSQL"
authors = ["Zeeshan Asim <zeeshanravian1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = {extras = ["all"], version = "^0.104.0"}
fastapi-mail = "^1.4.1"
sqlalchemy = {extras = ["all"], version = "^2.0.22"}
asyncpg = "^0.28.0"
alembic = "^1.12.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
black = "^23.10.1"
ipykernel = "^6.26.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
